# WallPal

./: .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  windows_setup.nsi
AppManager/: main.py  requirements.txt
AppMananger/: requirements.txt
Interfaces/: IPlugin.cs  IServices.cs  Interfaces.csproj
Plugins/: README.md
Plugins/SamplePlugin/: README.md  SamplePlugin.cs  SamplePlugin.csproj
Plugins/TrafficCameraProxy/: README.md  TrafficCameraProxy.cs  TrafficCameraProxy.csproj
WallPal/src/: PluginManager.cs
WallPal/src/WallpaperChanger/: WallpaperChanger.cs
WallpaperChanger/: Constants.cs  WallpaperChanger.csproj
WallpaperChanger/src/: ApplicationServices.cs  ConfigManager.cs  Constants.cs  DirectoryHelper.cs  LoggerConfig.cs  PluginManager.cs  Program.cs
WallpaperChanger/src/WallpaperChanger/: IWallpaperManager.cs  WallpaperChanger.cs
cmd/: main.go
pkg/database/: get.go  init.go  set.go
pkg/integrations/: integrations.go
pkg/integrations/trafikverket/: trafikverket.go
pkg/integrations/types/: integrations.go
pkg/plugins/: pluginManager.go
pkg/util/: constants.go  downloadImage.go  getPaths.go
pkg/wallpaper/: darwin.go  linux.go  wallpaper.go  windows.go
plugin_interface/: Cargo.toml
plugin_interface/src/: lib.rs
plugins/plugin_sample/: Cargo.toml  winDev.sh
plugins/trafikverket/: main.go
scripts/: buildAppManager.py  buildPlugin.sh  buildRelease.sh
ui/: main.go
wallpaper_changer/: Cargo.toml
wallpaper_changer/src/: main.rs  plugin_manager.rs  wallpaper.rs
wallpaper_changer/src/plugins/: .gitkeep
(+5 files in other folders)
