[package]
name = "wallpaper_changer"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin_interface = { path = "../plugin_interface" }
libloading = "0.7" 

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = 'unpacked'
overflow_checks = true